# ut-course-catalog

./: .all-contributorsrc  .copier-answers.yml  .pre-commit-config.yaml  CHANGELOG  CONTRIBUTING.md  README.md  pyproject.toml  setup.py
.github/ISSUE_TEMPLATE/: 1-bug_report.yml  2-feature-request.yml  config.yml
.github/workflows/: ci.yml  poetry-upgrade.yml
docs/: conf.py  index.md  installation.md  usage.md
src/ut_course_catalog/: __init__.py  __main__.py  analysis.py  cli.py  common.py  ja.py  pandas.py
tests/: test_ja.py  test_main.py
