[tool.poetry]
name = "ut-course-catalog"
version = "0.2.12"
description = "Python package for fetching UTokyo Online Course Catalogue"
authors = ["34j <34j.95a2p@simplelogin.com>"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/34j/ut-course-catalog"
documentation = "https://ut-course-catalog.readthedocs.io"
classifiers = [
    "Development Status :: 2 - Pre-Alpha",
    "Intended Audience :: Developers",
    "Natural Language :: English",
    "Operating System :: OS Independent",
    "Topic :: Software Development :: Libraries",
]
packages = [
    { include = "ut_course_catalog", from = "src" },
]

[tool.poetry.scripts]
ut-course-catalog = "ut_course_catalog.cli:cli"
utcc = "ut_course_catalog.cli:cli"

[tool.poetry.urls]
"Bug Tracker" = "https://github.com/34j/ut-course-catalog/issues"
"Changelog" = "https://github.com/34j/ut-course-catalog/blob/main/CHANGELOG.md"

[tool.poetry.dependencies]
python = "^3.9, <3.13"
click = "^8.1.7"
beautifulsoup4 = "^4.12.2"
aiohttp = "^3.8.6"
tenacity = "^8.2.3"
aiofiles = "^23.2.1"
tqdm = "^4.66.1"
pandas = "^2.1.1"
rich = "^13.6.0"
aiohttp-client-cache = {extras = ["all"], version = "^0.10.0"}

[tool.poetry.group.dev.dependencies]
pre-commit = ">=3"
pytest = "^7.0"
pytest-cov = "^3.0"

[tool.poetry.group.docs]
optional = true

[tool.poetry.group.docs.dependencies]
myst-parser = ">=0.16"
sphinx = ">=4.0"
sphinx-rtd-theme = ">=1.0"


[tool.poetry.group.wordcloud.dependencies]
janome = "^0.5.0"
wordcloud = "^1.9.2"

[tool.poetry.group.notebook]
optional = true

[tool.poetry.group.notebook.dependencies]
scikit-learn = "^1.3.1"
ipykernel = "^6.25.2"
jupyter = "^1.0.0"
matplotlib = "^3.8.0"
matplotx = "^0.3.10"
seaborn = "^0.13.0"

[tool.semantic_release]
branch = "main"
version_toml = ["pyproject.toml:tool.poetry.version"]
version_variable = "src/ut_course_catalog/__init__.py:__version__"
build_command = "pip install poetry && poetry build"

[tool.semantic_release.changelog]
exclude_commit_patterns = [
    "chore*",
    "ci*",
]

[tool.semantic_release.changelog.environment]
keep_trailing_newline = true

[tool.pytest.ini_options]
addopts = "-v -Wdefault --cov=ut_course_catalog --cov-report=term-missing:skip-covered"
pythonpath = ["src"]

[tool.coverage.run]
branch = true

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "@overload",
    "if TYPE_CHECKING",
    "raise NotImplementedError",
    'if __name__ == "__main__":',
]

[tool.isort]
profile = "black"
known_first_party = ["ut_course_catalog", "tests"]

[tool.autoflake]
expand_star_imports = true
remove_all_unused_imports = true

[tool.mypy]
check_untyped_defs = true
disallow_any_generics = true
disallow_incomplete_defs = true
disallow_untyped_defs = true
mypy_path = "src/"
no_implicit_optional = true
show_error_codes = true
warn_unreachable = true
warn_unused_ignores = true
exclude = [
    'docs/.*',
    'setup.py',
]

[[tool.mypy.overrides]]
module = "tests.*"
allow_untyped_defs = true

[[tool.mypy.overrides]]
module = "docs.*"
ignore_errors = true

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
